# education_data_hub

./: .gitignore  README.md
.github/workflows/: ci.yml  docker_publish.yml  import_data_gouv.yml  import_insee.yml  import_opendatasoft.yml  move_to_cleaned.yml  pipeline.yml  sql_import.yml  terraform.yml
api/: .dockerignore  dockerfile  requirements.txt
api/app/: auth.py  config.py  crud.py  database.py  init_db_users.py  main.py  models.py
api/app/routers/: auth.py  ips_lycee.py
prod/.github/workflows/: terraform.yml
prod/import/: README.md  azure_upload.py  import_data_gouv.py  import_insee.py  pyproject.toml  requirements-dev.txt  requirements.txt
prod/import/bdd_sql/: import_bac_par_academie_to_sql.py  import_ecoles_effectifs_to_sql.py  import_effectifs_tg_to_sql.py  import_ips_lycee_to_sql.py  import_to_sql.py  sql_connection.py  sql_import.py
prod/import/src/: __init__.py  azure_upload.py  import_data_gouv.py  import_data_opendatasoft.py  import_insee.py
prod/import/tests/: conftest.py  test_azure_upload.py  test_import_data_gouv.py  test_import_data_opendatasoft.py  test_import_insee.py
prod/pipeline/: requirements.txt
prod/pipeline/src/: data_cleaning.py  move_and_clean_csv.py  pipeline.py
prod/pipeline/tests/: test_data_cleaning.py
prod/terraform/: README.md  backend.tf  main.tf  variables.tf
