[project]
name = "import-scripts"
version = "0.1.0"
description = "Scripts d'import de données pour OKOTWICA"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests",
]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyw?$'

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3